--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -6,6 +6,7 @@
 
 .input {
     margin-bottom: 10px;
+    margin-top: 15px;
 }
 
 .input label {
@@ -18,10 +19,12 @@
 
 .button {
     padding: 10px 20px;
+    margin: 0 auto;
     background-color: #007bff;
     color: #fff;
     border: none;
     cursor: pointer;
+    width: 140px;
 }
 
 .button:hover {
